
  12 Sep 2014; Harold Naparst <harold@alum.mit.edu> subsonic-5.0_beta2.ebuild:
  ~x86

  12 Sep 2014; Harold Naparst <harold@alum.mit.edu> subsonic-5.0_beta2.ebuild:
  another test

  12 Sep 2014; Harold Naparst <harold@alum.mit.edu> +ChangeLog:
  ChangeLog test